Commit TakeHome and InClass07

--- a/index.qmd
+++ b/index.qmd
@@ -13,26 +13,33 @@ execute:
 setwd("/Users/jezelei/jezeleii/IS415-GA")
 ```
 
-```{=html}
 <section style="display: flex; justify-content: space-between; width:100%;">
-  <!-- Column 1 -->
-  <div style="flex: 1; text-align: center; padding: 10px; margin:0;">
-    <img src="headerImages/cover.png"style="max-width: 100%; height: auto;"/>
-  </div>
-  
-  <!-- Column 2 -->
-  <div style="flex: 1; text-align: left; padding-top: 50px ;">
-    <h1 style="font-weight: bold; color: #1E2A39;">JEZELEI MANANGAN</h1>
-    <p>Penultimate Year, BSc Information Systems SMU</p>
-    <p style="max-width: 600px; font-size:11px">
-      Explore my work and see how I turn complex datasets into actionable insights. Whether you’re interested in GIS, remote sensing, or spatial analysis, you’ll find a collection of projects that demonstrate my skills in R and newfound knowledge in geospatial analytics.
-    </p>
-  </div>
-</section>
+
+<!-- Column 1 -->
+
+::: {style="flex: 1; text-align: center; padding: 10px; margin:0;"}
+```         
+<img src="headerImages/cover.png"style="max-width: 100%; height: auto;"/>
 ```
+:::
+
+<!-- Column 2 -->
+
+::: {style="flex: 1; text-align: left; padding-top: 50px ;"}
+```         
+<h1 style="font-weight: bold; color: #1E2A39;">JEZELEI MANANGAN</h1>
+<p>Penultimate Year, BSc Information Systems SMU</p>
+<p style="max-width: 600px; font-size:11px">
+  Explore my work and see how I turn complex datasets into actionable insights. Whether you’re interested in GIS, remote sensing, or spatial analysis, you’ll find a collection of projects that demonstrate my skills in R and newfound knowledge in geospatial analytics.
+</p>
+```
+:::
+
+</section>
+
 <hr/>
 
-::: {style="display:flex; align-items:center;"}
+::::: {style="display:flex; align-items:center;"}
 <div>
 
 <h3>Hands-On \n Exercise 01</h3>
@@ -48,11 +55,11 @@ setwd("/Users/jezelei/jezeleii/IS415-GA")
 
 </a>
 :::
-:::
+:::::
 
 <hr/>
 
-::: {style="display:flex; align-items:center;"}
+::::: {style="display:flex; align-items:center;"}
 <div>
 
 <h3>Hands-On \n Exercise 02</h3>
@@ -68,11 +75,11 @@ setwd("/Users/jezelei/jezeleii/IS415-GA")
 
 </a>
 :::
-:::
+:::::
 
 <hr/>
 
-::: {style="display:flex; align-items:center;"}
+::::: {style="display:flex; align-items:center;"}
 <div>
 
 <h3>Hands-On \n Exercise 03</h3>
@@ -88,11 +95,11 @@ setwd("/Users/jezelei/jezeleii/IS415-GA")
 
 </a>
 :::
-:::
+:::::
 
 <hr/>
 
-::: {style="display:flex; align-items:center;"}
+::::: {style="display:flex; align-items:center;"}
 <div>
 
 <h3>Hands-On \n Exercise 04</h3>
@@ -108,11 +115,11 @@ setwd("/Users/jezelei/jezeleii/IS415-GA")
 
 </a>
 :::
-:::
+:::::
 
 <hr/>
 
-::: {style="display:flex; align-items:center;"}
+::::: {style="display:flex; align-items:center;"}
 <div>
 
 <h3>Hands-On \n Exercise 05</h3>
@@ -128,11 +135,11 @@ setwd("/Users/jezelei/jezeleii/IS415-GA")
 
 </a>
 :::
-:::
+:::::
 
 <hr/>
 
-::: {style="display:flex; align-items:center;"}
+::::: {style="display:flex; align-items:center;"}
 <div>
 
 <h3>Hands-On \n Exercise 06</h3>
@@ -148,4 +155,4 @@ setwd("/Users/jezelei/jezeleii/IS415-GA")
 
 </a>
 :::
-:::
+:::::
