Commit Hands-on Exercise 8 Corrections

--- a/Hands-On_Exercise/Hands-on_Ex08/Hands-on_Ex08.qmd
+++ b/Hands-On_Exercise/Hands-on_Ex08/Hands-on_Ex08.qmd
@@ -1,6 +1,6 @@
 ---
-title: "TakeHome Exercise 2: Drug Abuse in Thailand"
-date: "September 27, 2024"
+title: "Hands-on Exercise 8"
+date: "October 10, 2024"
 date-modified: "last-modified"
 execute: 
   eval: true
